added logic to remove the overflow tab once it is no longer needed.

--- a/overflow.html
+++ b/overflow.html
@@ -12,8 +12,7 @@
 
 <body>
 
-  <ul id="overflow-list" class="overflow-list">
-  </ul>
+  <ul id="overflow-list" class="overflow-list"></ul>
 
   <script src="./overflow_tab.js"></script>
 
