added css changes

--- a/overflow.html
+++ b/overflow.html
@@ -14,9 +14,12 @@
 
 <body>
   
-  <h1 class="title">TabsOverflow</h1>
+  <header class="overflow-header">
+    <h1 class="header-title">TabsOverflow</h1>
+    <p class="header-tab-count">Total: 10 Tabs</p>
+  </header>
 
-  <ul id="overflow-list" class="overflow-list"></ul>
+  <ol id="overflow-list" class="overflow-list"></ol>
 
   <script src="./overflow_tab.js"></script>
 
