--- a/overflow.html
+++ b/overflow.html
@@ -19,6 +19,18 @@
     <p class="header-tab-count">Total: 10 Tabs</p>
   </header>
 
+  <div class="sort-container">
+    <label class="sort-label" for="select-sort">Sort By:</label>
+    <select id="sort-select" class="sort-select" name="">
+      <option class="sort-option" value="" selected>Site</option>
+      <option class="sort-option" value="">Queue</option>
+      <option class="sort-option" value="">Title</option>
+    </select>
+
+    <input class="sort-checkbox" type="checkbox">
+    <label class="sort-checkbox-label" for="sort-checkbox">Reverse</label>
+  </div>
+
   <ol id="overflow-list" class="overflow-list"></ol>
 
   <script src="./overflow_tab.js"></script>
