adding reverse logic

--- a/overflow.html
+++ b/overflow.html
@@ -21,7 +21,7 @@
 
   <div class="sort-container">
     <label class="sort-label" for="select-sort">Sort By:</label>
-    <div class="sort-select">
+    <div id="sort-select" class="sort-select">
       <p class="sort-value">Site</p>
       <ul class="sort-dropdown">
         <li id="site-li" class="sort-option">Site</li>
@@ -35,7 +35,7 @@
       <option class="sort-option" value="">Title</option>
     </select> -->
 
-    <input class="sort-checkbox" type="checkbox">
+    <input id="sort-checkbox" class="sort-checkbox" type="checkbox">
     <label class="sort-checkbox-label" for="sort-checkbox">Reverse</label>
   </div>
 
