implement numsafetabs option

--- a/overflow.html
+++ b/overflow.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  
+
   <header class="overflow-header">
     <h1 class="header-title">TabsOverflow</h1>
     <p class="header-tab-count">Total: 10 Tabs</p>
@@ -40,6 +40,22 @@
   </div>
 
   <ol id="overflow-list" class="overflow-list"></ol>
+
+  <div class="sort-container">
+    <label class="sort-label" for="select-sort">Sort By:</label>
+    <div id="num-select" class="sort-select">
+      <p class="num-value">3</p>
+      <ul class="sort-dropdown ji">
+        <li id="num-0" class="num-option">0</li>
+        <li id="num-1" class="num-option">1</li>
+        <li id="num-2" class="num-option">2</li>
+        <li id="num-3" class="num-option">3</li>
+        <li id="num-4" class="num-option">4</li>
+        <li id="num-5" class="num-option">5</li>
+        <li id="num-6" class="num-option">6</li>
+        <li id="num-7" class="num-option">7</li>
+      </ul>
+    </div>
 
   <script src="./overflow_tab.js"></script>
 
