--- a/overflow.html
+++ b/overflow.html
@@ -21,12 +21,12 @@
 
   <div class="sort-container">
     <label class="sort-label" for="select-sort">Sort By:</label>
-    <div id="sort-select" class="sort-select">
-      <p class="sort-value">Site</p>
-      <ul class="sort-dropdown">
-        <li id="site-li" class="sort-option">Site</li>
-        <li id="queue-li" class="sort-option">Queue</li>
-        <li id="title-li" class="sort-option">Title</li>
+    <div id="sort-select" class="sort-select select">
+      <p class="sort-value input">Site</p>
+      <ul class="sort-dropdown dropdown">
+        <li id="site-li" class="dropdown-option">Site</li>
+        <li id="queue-li" class="dropdown-option">Queue</li>
+        <li id="title-li" class="dropdown-option">Title</li>
       </ul>
     </div>
 <!--     <select id="sort-select" class="sort-select" name="">
@@ -41,19 +41,19 @@
 
   <ol id="overflow-list" class="overflow-list"></ol>
 
-  <div class="sort-container">
-    <label class="sort-label" for="select-sort">Sort By:</label>
-    <div id="num-select" class="sort-select">
-      <p class="num-value">3</p>
-      <ul class="sort-dropdown ji">
-        <li id="num-0" class="num-option">0</li>
-        <li id="num-1" class="num-option">1</li>
-        <li id="num-2" class="num-option">2</li>
-        <li id="num-3" class="num-option">3</li>
-        <li id="num-4" class="num-option">4</li>
-        <li id="num-5" class="num-option">5</li>
-        <li id="num-6" class="num-option">6</li>
-        <li id="num-7" class="num-option">7</li>
+  <div class="option-safe-tabs">
+    <label class="sort-label" for="select-sort">Safe Tabs:</label>
+    <div id="num-select" class="num-select select">
+      <p class="option-value input">3</p>
+      <ul class="option-dropdown dropdown">
+        <li id="num-0" class="dropdown-option">0</li>
+        <li id="num-1" class="dropdown-option">1</li>
+        <li id="num-2" class="dropdown-option">2</li>
+        <li id="num-3" class="dropdown-option">3</li>
+        <li id="num-4" class="dropdown-option">4</li>
+        <li id="num-5" class="dropdown-option">5</li>
+        <li id="num-6" class="dropdown-option">6</li>
+        <li id="num-7" class="dropdown-option">7</li>
       </ul>
     </div>
 
