now remembers the desired number of safe tabs

--- a/overflow.html
+++ b/overflow.html
@@ -46,14 +46,14 @@
     <div id="num-select" class="num-select select">
       <p class="option-value input">3</p>
       <ul class="option-dropdown dropdown">
-        <li id="num-0" class="dropdown-option">0</li>
-        <li id="num-1" class="dropdown-option">1</li>
-        <li id="num-2" class="dropdown-option">2</li>
-        <li id="num-3" class="dropdown-option">3</li>
-        <li id="num-4" class="dropdown-option">4</li>
-        <li id="num-5" class="dropdown-option">5</li>
-        <li id="num-6" class="dropdown-option">6</li>
-        <li id="num-7" class="dropdown-option">7</li>
+        <li id="num-0" class="dropdown-option num">0</li>
+        <li id="num-1" class="dropdown-option num">1</li>
+        <li id="num-2" class="dropdown-option num">2</li>
+        <li id="num-3" class="dropdown-option num">3</li>
+        <li id="num-4" class="dropdown-option num">4</li>
+        <li id="num-5" class="dropdown-option num">5</li>
+        <li id="num-6" class="dropdown-option num">6</li>
+        <li id="num-7" class="dropdown-option num">7</li>
       </ul>
     </div>
 
