fixed sort-select input

--- a/overflow.html
+++ b/overflow.html
@@ -22,7 +22,7 @@
   <div class="sort-container">
     <label class="sort-label" for="select-sort">Sort By:</label>
     <div id="sort-select" class="sort-select select">
-      <p class="sort-value input">Site</p>
+      <p id="sort-value" class="sort-value input">Site</p>
       <ul class="sort-dropdown dropdown">
         <li id="site-li" class="dropdown-option">Site</li>
         <li id="queue-li" class="dropdown-option">Queue</li>
