--- a/overflow.html
+++ b/overflow.html
@@ -7,6 +7,7 @@
     <meta name="description">
     <meta name="author">
     <link rel="stylesheet" href="./css/overflow.css">
+    <link href="./images/logo_icon.ico" rel="shortcut icon" type="image/x-icon">
     <script src="./overflow_tab.js"></script>
     <title>Overflow Tab</title>
 
