changed permitted tabs from 8 to 12

--- a/overflow.html
+++ b/overflow.html
@@ -16,7 +16,10 @@
 <body>
 
   <header class="overflow-header">
-    <h1 class="header-title">TabsOverflow</h1>
+    <div>
+      <img class="ibm img-arrow" src="./images/green_arrow.svg" alt="">
+      <h1 class="header-title ibm">Tabs Overflow</h1>
+    </div>
     <p class="header-tab-count">Total: 10 Tabs</p>
   </header>
 
