added interface for changing numtabs

--- a/overflow.html
+++ b/overflow.html
@@ -48,7 +48,7 @@
   <div class="option-safe-tabs">
     <label class="sort-label" for="select-sort">Safe Tabs:</label>
     <div id="num-select" class="num-select select">
-      <p class="option-value input">3</p>
+      <p class="option-value input" id='safe-tabs'>3</p>
       <ul class="option-dropdown dropdown">
         <li id="num-0" class="dropdown-option num">0</li>
         <li id="num-1" class="dropdown-option num">1</li>
@@ -60,5 +60,22 @@
         <li id="num-7" class="dropdown-option num">7</li>
       </ul>
     </div>
+
+    <div class="option-num-tabs">
+      <label class="sort-label" for="select-sort">Number of Tabs:</label>
+      <div id="num-tabs-select" class="num-select select">
+        <p class="option-value input" id='num-tabs'>12</p>
+        <ul class="option-dropdown dropdown">
+          <li id="tab-num-8" class="dropdown-option numb">8</li>
+          <li id="tab-num-9" class="dropdown-option numb">9</li>
+          <li id="tab-num-10" class="dropdown-option numb">10</li>
+          <li id="tab-num-11" class="dropdown-option numb">11</li>
+          <li id="tab-num-12" class="dropdown-option numb">12</li>
+          <li id="tab-num-13" class="dropdown-option numb">13</li>
+          <li id="tab-num-14" class="dropdown-option numb">14</li>
+          <li id="tab-num-15" class="dropdown-option numb">15</li>
+          <li id="tab-num-16" class="dropdown-option numb">16</li>
+        </ul>
+      </div>
 </body>
 </html>
