allowed the user to actually set the number of tabs they want

--- a/overflow.html
+++ b/overflow.html
@@ -58,6 +58,10 @@
         <li id="num-5" class="dropdown-option num">5</li>
         <li id="num-6" class="dropdown-option num">6</li>
         <li id="num-7" class="dropdown-option num">7</li>
+        <li id="num-8" class="dropdown-option num">8</li>
+        <li id="num-9" class="dropdown-option num">9</li>
+        <li id="num-10" class="dropdown-option num">10</li>
+        <li id="num-11" class="dropdown-option num">11</li>
       </ul>
     </div>
 
